<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bMove_2" Id="{384cc79f-523c-48c3-bc3e-6a65d94d022a}">
    <Declaration><![CDATA[VAR_GLOBAL
// Прямое движение
bMove2s01_s02_1		:BOOL;
bMove2s01_s02		:BOOL;
bMove2s02_1_s02_2	:BOOL;

bMove2s02_2_s03_1	:BOOL;
bMove2s02_s03		:BOOL;
bMove2s03_1_s03_2	:BOOL;

bMove2s03_2_s04_1	:BOOL;
bMove2s03_s04		:BOOL;
bMove2s04_1_s04_2	:BOOL;

bMove2s04_2_s05		:BOOL;
bMove2s05_s06		:BOOL;

END_VAR


]]></Declaration>
  </GVL>
</TcPlcObject>