<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bSens_2" Id="{d08e9ce8-3863-435a-a086-9ff2b6457d44}">
    <Declaration><![CDATA[VAR_GLOBAL
// --------------------------------------Список датчиков--------------------------------------------//
//---------------------------------------Второй конвейер--------------------------------------------//
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 6 (EPP2339-0021) X2^Channel 1^Input'}
bSens2s01D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 6 (EPP2339-0021) X2^Channel 2^Input'}
bSens2s01D2 AT%I* :BOOL;	// Датчик в конце секции (в обратном направлении
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 6 (EPP2339-0021) X2^Channel 3^Input'}
bSens2s01D3 AT%I* :BOOL;	// Датчик контроля вил)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 5 (EPP1004-0061) X2^Channel 1^Input'}
bSens2s02D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 5 (EPP1004-0061) X2^Channel 2^Input'}
bSens2s02D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 5 (EPP1004-0061) X2^Channel 3^Input'}
bSens2s03D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 5 (EPP1004-0061) X2^Channel 4^Input'}
bSens2s03D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 1^Input'}
bSens2s04D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 2^Input'}
bSens2s04D2 AT%I* :BOOL;	// Датчик в середине секции 
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 3^Input'}
bSens2s04D3 AT%I* :BOOL;	// Датчик сканирования RFID
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 4^Input'}
bSens2s05D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 5^Input'}
bSens2s05D2 AT%I* :BOOL;	// Датчик управления двойным движением
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 6^Input'}
bSens2s06D1 AT%I* :BOOL;	// Датчик в конце секции (в прямом направлении)
{attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 13 (EK1322)^Box 4 (EPP2339-0021) X2^Channel 7^Input'}
bSens2s06D2 AT%I* :BOOL;	// Датчик контроля вил

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>